mern-stack-example/mern/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mern-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mern-frontend

  template:
    metadata:
      labels:
        app: mern-frontend

    spec:
      containers:
        - name: frontend
          image: mern-frontend:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 5173
