mern-stack-example/mern/k8s/test-stateful-pvc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage-demo

spec:
  serviceName: storage-demo
  replicas: 2

  selector:
    matchLabels:
      app: storage-demo

  template:
    metadata:
      labels:
        app: storage-demo

    spec:
      containers:
        - name: nginx
          image: nginx

          volumeMounts:
            - name: data
              mountPath: /data

  volumeClaimTemplates:
    - metadata:
        name: data

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
