mern-stack-example/mern/k8s/test-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: test-statefulset

spec:
  serviceName: test-stateful-service
  replicas: 3

  selector:
    matchLabels:
      app: test-stateful

  template:
    metadata:
      labels:
        app: test-stateful

    spec:
      containers:
        - name: test
          image: nginx
