mern-stack-example/mern/k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mern-backend-service

spec:
  selector:
    app: mern-backend

  ports:
    - port: 5050
      targetPort: 5050

  type: ClusterIP
