mern-stack-example/mern/k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mern-frontend-service

spec:
  selector:
    app: mern-frontend

  ports:
    - port: 5173
      targetPort: 5173

  type: NodePort
